# network-agent

./: .gitignore  CHANGELOG.md  README.md  README_V2.md  README_V3.md  SECURITY.md  api_server.py  command.yaml  config.yaml  example.inventory.yaml  inventory.yaml  main.py  pyproject.toml  repomix-output.md  todo.md
docs/: api_documentation.md  user_guide.md
examples/: __init__.py
inventory/: config.yaml  defaults.yaml  hosts.yaml
scripts/: generate_synthetic_logs.py  ingest_logs.py  secure_creds.py
src/: __init__.py  agent.py  app_config.py  audit.py  command_executor.py  command_handler.py  commands.py  config.py  config_factory.py  config_file.py  console.py  device_manager.py  device_router.py  devices.py  env_config.py  example_health_api.py  example_metrics_api.py  exceptions.py  health.py  interface.py  inventory.py  logging_config.py  metrics.py  models.py  network_device.py  prompts.py  security.py  sensitive_data.py  session_manager.py  settings.py  simple_agent.py  utils.py  validation.py
src/agent/: __init__.py  main_agent.py
src/agents/: __init__.py  analyzer.py  device_agent.py  executor.py  inventory_agent.py  network_agent.py  planner.py  router_agent.py  simple_agent.py
src/api/: app.py
src/core/: __init__.py  command_executor.py  config.py  device_manager.py  device_router.py  health_monitor.py  inventory.py  models.py  network_manager.py  sensitive_data.py  state_manager.py  validation.py
src/graph/: __init__.py  workflow.py
src/nlp/: preprocessor.py
src/tools/: __init__.py  device_router.py  device_session_tools.py  execute_show.py  executor.py  inventory.py  inventory_tools.py  log_analyzer.py  parser.py  ping_tool.py  sensitive_data_tool.py  validation_tools.py
tests/: test_agent.py  test_allowed_prefixes.py  test_analyzer.py  test_audit.py  test_audit_logging.py  test_blocked_keywords.py  test_command_chaining.py  test_comprehensive_security.py  test_config_file.py  test_health.py  test_integration.py  test_interface.py  test_metrics.py  test_network_device.py  test_network_manager.py  test_prompt_injection.py  test_security.py  test_sensitive_data.py  test_settings.py  test_simple_agent.py  test_workflow.py
