[project]
name = "network-agent-v3"
version = "3.0.0"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.33.0",
    "langchain>=0.2.0,<0.3.0",
    "langchain-groq>=0.1.0,<0.2.0",
    "langgraph>=0.1.0,<0.2.0",
    "netmiko>=4.6.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    # New dependencies for V2
    "langchain-community>=0.2.0", # For text splitters and other utilities
    # New dependency for V3
    "spacy>=3.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "RET", "RUF"]
extend-ignore = [
    "E501",  # Line length - handled through other mechanisms
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2
