[project]
name = "nlp-network-agent"
version = "1.0.0"
requires-python = ">=3.12"

# Note: For security vulnerabilities, we've implemented workarounds in the code itself
# since updating to the fixed versions creates dependency conflicts
dependencies = [
    "groq>=0.33.0",
    "langchain>=0.2.0,<0.3.0",
    "langchain-groq>=0.1.0,<0.2.0",
    "langgraph>=0.1.0,<0.2.0",
    "netmiko>=4.6.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    # Keeping compatible versions due to dependency conflicts
    # Security vulnerabilities addressed through code-level mitigations
    "langchain-community>=0.2.19,<0.3.0",
    "langchain-text-splitters>=0.2.2,<0.3.0",
    # New dependency for enhanced NLP processing
    "spacy>=3.7.0",
    "typer>=0.20.0",
    "pydantic-settings>=2.12.0",
    "pip>=25.3",
    "urllib3>=2.5.0", # Updated for security
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[project.optional-dependencies]
nlp-models = ["spacy[lookups]"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "RET", "RUF"]
extend-ignore = [
    "E501",  # Line length - handled through other mechanisms
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2
