[project]
name = "nlp-network-agent"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    "groq>=0.33.0",
    "langchain>=0.2.0,<0.3.0",
    "langchain-groq>=0.1.0,<0.2.0",
    "nornir>=3.4.0",
    "nornir-netmiko>=0.2.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "langchain-community>=0.2.19,<0.3.0",
    "typer>=0.20.0",
    "pydantic-settings>=2.12.0",
    "pip>=25.3",
    "urllib3>=2.5.0",
    "pytest>=9.0.1",
]

[dependency-groups]
dev = ["ruff>=0.14.5"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "RET", "RUF"]
extend-ignore = [
    "E501",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2
